--- a/news-fact-checker/extension/popup.html
+++ b/news-fact-checker/extension/popup.html
@@ -90,7 +90,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="images/icon48.jpeg" alt="Logo">
+    <img src="images/icon48.png" alt="Logo">
     <h1>TruthPilot</h1>
   </div>
   
