--- a/news-fact-checker/extension/privacy_policy.html
+++ b/news-fact-checker/extension/privacy_policy.html
@@ -72,7 +72,7 @@
 
   <h2>Contact Us</h2>
   <p>
-    If you have any questions about this Privacy Policy, please contact us at privacy@truthpilot.example.com.
+    If you have any questions about this Privacy Policy, please contact us at idobeerie46@gmail.com.
   </p>
 </body>
 </html> 
