Add Paddle integration and checkout functionality - payment integration, checkout pages, account management, updated gitignore

--- a/news-fact-checker/extension/sidebar.html
+++ b/news-fact-checker/extension/sidebar.html
@@ -13,6 +13,15 @@
     </div>
     
     <div class="content">
+      <!-- Account Status Section -->
+      <div id="accountStatus" class="account-status" style="display: none;">
+        <div class="account-info">
+          <span id="accountPlan" class="plan-badge">Free</span>
+          <span id="accountUsage" class="usage-text">0/5 this month</span>
+        </div>
+        <button id="manageAccountBtn" class="manage-account-btn">Manage Account</button>
+      </div>
+      
       <div class="info">
         Analyze this article for potential misinformation or bias.
       </div>
