--- a/news-fact-checker/extension/sidebar.html
+++ b/news-fact-checker/extension/sidebar.html
@@ -38,6 +38,18 @@
         Loading...
       </div>
       
+      <!-- Streaming Progress Indicator -->
+      <div id="streamingProgress" class="streaming-progress" style="display: none;">
+        <div class="progress-bar">
+          <div id="progressFill" class="progress-fill" style="width: 0%;"></div>
+        </div>
+        <div id="progressText" class="progress-text"></div>
+        <div id="streamingStatus" class="streaming-status">
+          <span id="streamingMode" class="streaming-mode"></span>
+          <span id="issuesFound" class="issues-found">0 issues found</span>
+        </div>
+      </div>
+      
       <div id="results" class="results">
         <div id="resultCount" class="result-count" style="display: none;">
           Found 0 potential issues
